ombi/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ombi
  namespace: filme
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ombi
  template:
    metadata:
      labels:
        k8s-app: ombi
    spec:
      containers:
        - name: ombi
          image: linuxserver/ombi:latest
          ports:
            - containerPort: 3579
          volumeMounts:
            - mountPath: /config
              name: config
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "100m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ombi-config
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop
