ombi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ombi
  namespace: filme
spec:
  ports:
    - port: 3579
      targetPort: 3579
  selector:
    k8s-app: ombi
